# synthetic-data-engine

./: .gitignore  README.md  main.py  pyproject.toml
synthetic_data_engine/: __init__.py  cli.py  pipeline.py  retry.py
synthetic_data_engine/dataset/: builder.py  dedupe.py  exporters.py  report.py
synthetic_data_engine/generation/: generator.py
synthetic_data_engine/judging/: judge.py
synthetic_data_engine/models/: base.py  factory.py  local.py  ollama.py  openai_compatible.py
synthetic_data_engine/storage/: sqlite.py
synthetic_data_engine/tasks/: loader.py  spec.py  summary.py  validation.py
tasks/: general-instruction.yaml
tests/: test_dataset_builder.py  test_judge.py  test_models.py  test_pipeline.py  test_task_spec.py  test_validation.py
