[project]
name = "synthetic-data-engine"
version = "0.1.0"
description = "Generate, judge, filter, and export synthetic datasets for LLM workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["synthetic_data_engine"]

[project.scripts]
sde = "synthetic_data_engine.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]
